--- a/church-ae-ejb/nbproject/project.properties
+++ b/church-ae-ejb/nbproject/project.properties
@@ -22,6 +22,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.commons-codec-1.10.jar=..\\church-ae-war\\web\\resources\\lib\\commons-codec-1.10.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.deploy.on.save=true
@@ -35,7 +36,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 jar.name=church-ae-ejb.jar
-javac.classpath=
+javac.classpath=\
+    ${file.reference.commons-codec-1.10.jar}
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
