--- a/church-ae-war/nbproject/project.properties
+++ b/church-ae-war/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.commons-codec-1.10.jar=web\\resources\\lib\\commons-codec-1.10.jar
 file.reference.modena-theme-1.0.1.jar=web\\resources\\lib\\modena-theme-1.0.1.jar
 file.reference.omnifaces-2.2.jar=web\\resources\\lib\\omnifaces-2.2.jar
 file.reference.primefaces-5.3.jar=web\\resources\\lib\\primefaces-5.3.jar
@@ -48,7 +49,8 @@ javac.classpath=\
     ${reference.church-ae-ejb.dist}:\
     ${file.reference.modena-theme-1.0.1.jar}:\
     ${file.reference.primefaces-5.3.jar}:\
-    ${file.reference.omnifaces-2.2.jar}
+    ${file.reference.omnifaces-2.2.jar}:\
+    ${file.reference.commons-codec-1.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
